--- a/src/compents/Header.css
+++ b/src/compents/Header.css
@@ -2,13 +2,9 @@
 header {
   color: black;
   background-color: #FFFF;
-  height: 60%;
-  padding: 0px 20px; }
+  height: 100%; }
 
 h1 {
   font-family: "Monofett", cursive;
   text-align: left;
-  width: 65%;
-  line-height: 1.3rem;
-  font-size: 1.3rem;
-  font-weight: 100; }
+  width: 30%; }
