--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,12 +2,17 @@
 
 header {
     color: black;
-    background-color: #1192d3;
-    height: 100%;
+    background-color: #FFFF;
+    height: 60%;
+    padding: 0px 20px;
 }
+
 
 h1 {
     font-family: $header-font;
-    text-align:left;
-    width: 30%;
+    text-align: left;
+    width: 65%;
+    line-height: 1.3rem;
+    font-size: 1.3rem;
+    font-weight: 100;
 }
