--- a/src/clientlib-base/_fonts.scss
+++ b/src/clientlib-base/_fonts.scss
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Monofett&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 // Font variables
 
-$header-font: 'Monofett', cursive;
+$header-font: 'Bebas Neue', cursive;
