--- a/src/clientlib-base/_breakpoints.scss
+++ b/src/clientlib-base/_breakpoints.scss
@@ -1,6 +1,4 @@
-$xs: 320px;
-$sm: 576px;
-$md: 768px;
-$lg: 992px;
-$xl: 1200px;
-$xxl: 1440px;
+$breakpoints: ('xs': 320px,
+    'sm': 576px,
+    'md': 768px,
+    'xl': 1200px) !default;
