--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-header {
-  display: flex;
-  align-items: center;
-  color: white;
+.header {
   position: fixed;
   width: 100%;
   height: auto;
-  background-color: #EE1C25;
+  background-color: white;
   height: 15%;
   padding: 0px 20px; }
-
-h1 {
-  font-family: "Bebas Neue", cursive;
-  text-align: left;
-  width: 65%;
-  line-height: 1.3rem;
-  font-size: 1.3rem;
-  font-weight: 100; }
+  .header nav {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    align-items: center; }
+    @media (max-width: 320px) {
+      .header nav {
+        width: 88%; } }
+    .header nav img {
+      width: 9%; }
+      @media (max-width: 320px) {
+        .header nav img {
+          width: 30%; } }
+  .header__donation {
+    background-color: #EBEFF3;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    padding: 16px 18px;
+    padding: 3px 24px;
+    font-family: "Bebas Neue", cursive; }
+    .header__donation .fa-heart {
+      color: #EE1C25;
+      margin-right: 5px; }
+  @media (max-width: 320px) {
+    .header_donation--description {
+      display: none; } }
+  .header__group-donation-and-menu {
+    display: flex;
+    width: 20%;
+    align-items: baseline;
+    justify-content: space-around; }
