Implementa estrutura inicial de menu navigation, ainda sem associar estado do componente para togle do menu

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,8 @@
   height: auto;
   background-color: white;
   height: 15%;
-  padding: 0px 20px; }
+  padding: 0px 20px;
+  z-index: 99; }
   .header nav {
     display: flex;
     justify-content: space-between;
