Ajuste altura menu navigation para mobile devices

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -29,6 +29,9 @@
   list-style: none;
   background-color: #fff;
   width: 99vw; }
+  @media (max-width: 576px) {
+    .menu-navigation__items {
+      padding-top: 20%; } }
 
 .menu-navigation__list {
   padding-top: 8%;
