Finalização da composição de Header e Menu navigation, implementando dois novos botões de link/âncora, altera novo resource de imagem para logo, insere novo parâmetro para breakpoint 1440px (xxl), altera referência de cor vermelha, refatora button-donation tornando-o componente que será consumido tanto em Header como na composição da página Home

--- a/src/clientlib-base/_breakpoints.scss
+++ b/src/clientlib-base/_breakpoints.scss
@@ -1,4 +1,5 @@
 $breakpoints: ('xs': 320px,
     'sm': 576px,
     'md': 768px,
-    'xl': 1200px) !default;
+    'xl': 1200px,
+    'xxl': 1440px) !default;
