--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 .header {
+  display: flex;
   position: fixed;
   width: 100%;
   height: auto;
   background-color: white;
+  font-family: "Bebas Neue", cursive;
+  font-weight: 400;
+  font-size: 17px;
   height: 15%;
   padding: 0px 20px;
   z-index: 99; }
@@ -18,44 +22,37 @@
     @media (max-width: 576px) {
       .header__navigation-top {
         width: 88%; } }
+    .header__navigation-top h1 {
+      width: 40%; }
     .header__navigation-top img {
-      width: 9%; }
+      width: 40%; }
       @media (max-width: 576px) {
         .header__navigation-top img {
-          width: 30%; } }
-  .header__donation {
-    background-color: #EBEFF3;
+          width: 50%;
+          padding: 4% 4% 4% 0%; } }
+      @media (min-width: 1200px) {
+        .header__navigation-top img {
+          margin-right: 35%; } }
+  .header__button:not(.header__button--donation) {
     display: flex;
-    align-items: center;
-    border-radius: 50px;
-    padding: 16px 18px;
-    padding: 3px 24px;
-    font-family: "Bebas Neue", cursive; }
-    @media (max-width: 576px) {
-      .header__donation {
-        padding: 15px 24px;
-        margin-right: 20px; } }
-    .header__donation .fa-heart {
-      color: #EE1C25;
-      margin-right: 5px;
-      border-radius: 95%;
-      -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
-      animation: heartbeat 1.5s ease-in-out infinite both; }
-      @media (max-width: 576px) {
-        .header__donation .fa-heart {
-          margin-right: 0px;
-          font-size: 1.2em; } }
-  @media (max-width: 576px) {
-    .header_donation--description {
-      display: none; } }
+    justify-content: center;
+    padding: 7.6%;
+    width: 16%;
+    border-top: 4px solid transparent; }
+    .header__button:not(.header__button--donation):hover {
+      border-top: 4px solid #ED1C24;
+      transition: 0.9s; }
+    @media (min-width: 1440px) {
+      .header__button:not(.header__button--donation) {
+        padding: 10.2%; } }
   .header__group-donation-and-menu {
     display: flex;
-    width: 20%;
+    width: 35%;
     align-items: baseline;
-    justify-content: space-around; }
+    justify-content: space-between; }
     @media (max-width: 576px) {
       .header__group-donation-and-menu {
-        width: 45%; } }
+        width: 20%; } }
     .header__group-donation-and-menu a {
       text-decoration: none;
       color: black; }
@@ -73,8 +70,8 @@
  */
 @-webkit-keyframes heartbeat {
   from {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: scale(3);
+    transform: scale(3);
     -webkit-transform-origin: center center;
     transform-origin: center center;
     -webkit-animation-timing-function: ease-out;
