--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,14 +30,18 @@
 
         h1 {
             width: 40%;
+
+            @include mq-max(sm) {
+                width: 50%;
+            }
         }
 
         img {
             width: 40%;
 
             @include mq-max(sm) {
-                width: 50%;
-                padding: 4% 4% 4% 0%;
+                width: 100%;
+                padding: 4% 4% 0% 0%;
             }
 
             @include mq-min(xl) {
@@ -60,8 +64,12 @@
             transition: 0.9s;
         }
 
+        @include mq-max(sm) {
+            display: none;
+        }
+
         @include mq-min (xxl) {
-            padding: 10.2%;
+            padding: 8%;
         }
 
 
